--- a/backend/execution/src/main/resources/application.properties
+++ b/backend/execution/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=analysis
+spring.application.name=execution
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
 spring.datasource.username=myuser
