--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -7,7 +7,9 @@ services:
       - 'MYSQL_ROOT_PASSWORD=verysecret'
       - 'MYSQL_USER=myuser'
     ports:
-      - '3306'
+      - '3306:3306'
+    volumes:
+      -
 
 
   adminer:
