--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   mysql:
     image: 'mysql:latest'
@@ -6,11 +8,14 @@ services:
       - 'MYSQL_PASSWORD=secret'
       - 'MYSQL_ROOT_PASSWORD=verysecret'
       - 'MYSQL_USER=myuser'
-    ports:
-      - '3306:3306'
     volumes:
-      -
-
+      - ./assets:/docker-entrypoint-initdb.d/assets  # Mount CSV files
+      - ./mysql-init:/docker-entrypoint-initdb.d     # Mount SQL scripts
+    ports:
+      - '3307:3306'  # Map MySQL container port 3306 to host port 3307 to avoid conflict with local MySQL
+    restart: unless-stopped  # Ensures the container restarts if it crashes but won't restart on system boot
+    container_name: mysql-1
+    command: --secure-file-priv=""  # This disables the option
 
   adminer:
     image: 'adminer'
