--- a/backend/execution/src/main/resources/application.properties
+++ b/backend/execution/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+server.port=8087
+
 spring.application.name=execution
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3308/ExecutionDatabase
 spring.datasource.username=myuser
 spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+spring.security.basic.enabled=false
