--- a/backend/records/src/main/resources/application.properties
+++ b/backend/records/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8086
+
 spring.application.name=records
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3308/RecordsDatabase
