--- a/backend/gateway/src/main/resources/application.properties
+++ b/backend/gateway/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=gateway
+server.port=8085
+
+# Configure routes
+spring.cloud.gateway.routes[0].id=limit-service
+spring.cloud.gateway.routes[0].uri=http://localhost:8087
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/limits/**
+
+spring.cloud.gateway.routes[1].id=instrument-service
+spring.cloud.gateway.routes[1].uri=http://localhost:8080
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/instruments/**
+
+spring.cloud.gateway.routes[2].id=record-service
+spring.cloud.gateway.routes[2].uri=http://localhost:8086
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/records/**
+
+logging.level.root=info
+logging.level.org.springframework.cloud.gateway=TRACE
+logging.level.org.springframework.web=DEBUG
+
+management.endpoints.web.exposure.include=*
+management.endpoint.gateway.enabled=true
