--- a/backend/gateway/src/main/resources/application.properties
+++ b/backend/gateway/src/main/resources/application.properties
@@ -14,6 +14,10 @@ spring.cloud.gateway.routes[2].id=record-service
 spring.cloud.gateway.routes[2].uri=http://localhost:8086
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/records/**
 
+spring.cloud.gateway.routes[3].id=auth-service
+spring.cloud.gateway.routes[3].uri=http://localhost:8084
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/auth/**
+
 logging.level.root=info
 logging.level.org.springframework.cloud.gateway=TRACE
 logging.level.org.springframework.web=DEBUG
