auth and gateway implementation

--- a/backend/gateway/src/main/resources/application.properties
+++ b/backend/gateway/src/main/resources/application.properties
@@ -2,9 +2,12 @@ spring.application.name=gateway
 server.port=8085
 
 # Configure routes
+#spring.cloud.gateway.default-filters=AuthenticationFilter
+
 spring.cloud.gateway.routes[0].id=limit-service
 spring.cloud.gateway.routes[0].uri=http://localhost:8087
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/limits/**
+
 
 spring.cloud.gateway.routes[1].id=instrument-service
 spring.cloud.gateway.routes[1].uri=http://localhost:8080
