--- a/backend/analysis_testing/src/main/resources/application.properties
+++ b/backend/analysis_testing/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-server.port=8079
 spring.application.name=SpringDatabaseMySQL
-
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3307/AnalysisDatabase
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
 spring.datasource.username=myuser
 spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
