--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.7.7",
     "jose": "^5.8.0",
     "next": "14.2.7",
+    "next-auth": "^4.24.7",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
